# lucid-lang

./: Cargo.toml
.zed/: settings.json
src/: ast.rs  codegen.rs  compiler.rs  error.rs  lexer.rs  main.rs  parser.rs  type_checker.rs
test_files/: basic.lua  basic.lucid  comments.lua  comments.lucid  interfaces.lua  interfaces.lucid
