[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.0.0", features = ["derive"]}
# tracing = "0.1.38"
tracing = "0.1"

# tracing-subscriber = "0.3.16"
tracing-subscriber = "0.3"
tracing-indicatif = "0.3.13"
reedline = "0.27"          # For REPL functionality
crossterm = "0.28.1"


colored = "3"
ratatui = "0.29.0"
